# MachineLearningForRobotics

./: .gitignore  README.md
ros2_ws/src/Final Project/floor_follower/: setup.cfg  setup.py
ros2_ws/src/Final Project/floor_follower/floor_follower/: floor_follower_node.py
ros2_ws/src/Final Project/metal_detection_marker/: CMakeLists.txt
ros2_ws/src/Final Project/shore_follower_drive_base/launch/: start.launch.py
ros2_ws/src/Final Project/shore_follower_drive_base/shore_follower_drive_base/: shore_follower_drive.py
ros2_ws/src/Final Project/shore_follower_drive_base2/: setup.cfg  setup.py
ros2_ws/src/Final Project/shore_follower_drive_base2/launch/: start.launch.py
ros2_ws/src/Final Project/shore_follower_observe/launch/: record.launch.py
ros2_ws/src/Final Project/shore_follower_observe/src/: shore_follower_observe.cpp
ros2_ws/src/Final Project/shore_follower_observe2/: package.xml
ros2_ws/src/Final Project/shore_follower_observe2/launch/: record.launch.py
ros2_ws/src/Final Project/shore_follower_observe2/src/: shore_follower_observe2.cpp
ros2_ws/src/arm_observe/launch/: record.launch.py
ros2_ws/src/collision_avoidance_base/: CMakeLists.txt
ros2_ws/src/collision_avoidance_base/launch/: ca.launch.py  ca_auto.launch.py  ca_turtle.launch.py
ros2_ws/src/collision_avoidance_base/src/: collision_avoidance.cpp
ros2_ws/src/cs7630_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/face_detect_base/: package.xml
ros2_ws/src/face_detect_base/face_detect_base/: face_detect_node.py
ros2_ws/src/face_detect_base/launch/: face_detect.launch.py
ros2_ws/src/face_detect_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/face_detect_msgs/msg/: FaceDetections.msg
ros2_ws/src/floor_follower/: package.xml
ros2_ws/src/floor_follower/launch/: start.launch.py
ros2_ws/src/floor_graph/: package.xml  setup.cfg  setup.py
ros2_ws/src/floor_graph/floor_graph/: build_graph.py  build_graph_test.py  viz_graph.py
ros2_ws/src/floor_graph/launch/: floor_graph.launch.py
ros2_ws/src/floor_nav/: CMakeLists.txt
ros2_ws/src/floor_nav/include/floor_nav/: SimTasksEnv.h
ros2_ws/src/floor_nav/launch/: launch_server.launch.py
ros2_ws/src/floor_nav/missions/: test_goto.py  test_graph_2d.py  test_wander.py
ros2_ws/src/floor_plane_ceres_base/: CMakeLists.txt  package.xml
ros2_ws/src/floor_plane_ceres_base/launch/: fpr.launch.py
ros2_ws/src/floor_plane_ceres_base/src/: floor_plane_ceres.cpp
ros2_ws/src/floor_plane_classify_base/: package.xml  setup.cfg  setup.py
ros2_ws/src/floor_plane_classify_base/floor_plane_classify_base/: floor_plane_classify_node.py
ros2_ws/src/floor_plane_classify_base/launch/: start.launch.py
ros2_ws/src/floor_plane_classify_base/scripts/: train_floor_plane.sh
ros2_ws/src/floor_plane_hough_base/: CMakeLists.txt  package.xml
ros2_ws/src/floor_plane_hough_base/launch/: fpr.launch.py
ros2_ws/src/floor_plane_hough_base/src/: floor_plane_hough.cpp  pointcloud_accumulator.cpp
ros2_ws/src/floor_plane_ransac_base/: CMakeLists.txt  package.xml
ros2_ws/src/floor_plane_ransac_base/launch/: fpr.launch.py
ros2_ws/src/floor_plane_ransac_base/src/: floor_plane_ransac.cpp
ros2_ws/src/floor_plane_record_base/: CMakeLists.txt  package.xml
ros2_ws/src/floor_plane_record_base/launch/: record.launch.py
ros2_ws/src/floor_plane_record_base/src/: floor_plane_extract.cpp  profthing.cpp
ros2_ws/src/floor_plane_regression_base/: CMakeLists.txt  package.xml
ros2_ws/src/floor_plane_regression_base/launch/: fpr.launch.py
ros2_ws/src/floor_plane_regression_base/src/: floor_plane_regression.cpp
ros2_ws/src/joystick_control_cs7644/: package.xml  setup.cfg  setup.py
ros2_ws/src/joystick_control_cs7644/joystick_control_cs7644/: joystick_control_cs7644_node.py
ros2_ws/src/metal_detection_marker/: package.xml
ros2_ws/src/metal_detection_marker/launch/: fpr.launch.py
ros2_ws/src/metal_detection_marker/src/: metal_detection.cpp
ros2_ws/src/model_prediction/: package.xml  setup.cfg  setup.py
ros2_ws/src/model_prediction/launch/: predict.launch.py  record.launch.py
ros2_ws/src/model_prediction/model_prediction/: backandforth.py  backandforth1.py  backandforth2.py  model_prediction_rate.py
ros2_ws/src/my_package/: package.xml
ros2_ws/src/project1_gr9/floor_cylinder_detection/: CMakeLists.txt  package.xml
ros2_ws/src/project1_gr9/floor_cylinder_detection/launch/: fpr.launch.py
ros2_ws/src/project1_gr9/floor_cylinder_detection/src/: cylinder_detection.cpp
ros2_ws/src/project1_gr9/floor_plane_mapping/: CMakeLists.txt  package.xml
ros2_ws/src/project1_gr9/floor_plane_mapping/launch/: fpr.launch.py
ros2_ws/src/project1_gr9/floor_plane_mapping/src/: floor_map.cpp
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/py_srvcli/: package.xml  setup.py
ros2_ws/src/py_srvcli/py_srvcli/: client_member-function.py  service_member_function.py
ros2_ws/src/python_parameters/: package.xml  python_parameters_launch.py  setup.py
ros2_ws/src/python_parameters/python_parameters/: python_parameters_node.py
ros2_ws/src/rqt_virtual_joystick/: LICENSE  README.md  package.xml  plugin.xml  setup.cfg  setup.py
ros2_ws/src/rqt_virtual_joystick/src/rqt_virtual_joystick/: __init__.py  control_panels.py  joystick_main_widget.py  main.py  virtual_joystick.py
ros2_ws/src/rqt_virtual_joystick/src/rqt_virtual_joystick/publishers/: joy_publisher.py  twist_publisher.py
ros2_ws/src/rqt_virtual_joystick/src/rqt_virtual_joystick/widgets/: controller_buttons_widget.py  joystick_widget.py  segmented_toggle_widget.py
ros2_ws/src/shore_follower_drive_base2/: package.xml
ros2_ws/src/shore_follower_drive_base2/shore_follower_drive_base2/: shore_follower_drive2.py
ros2_ws/src/shore_follower_observe/src/: shore_follower_observe.cpp
ros2_ws/src/shore_follower_observe2/: CMakeLists.txt
ros2_ws/src/tensorflow_models_base/scripts/: train.sh
ros2_ws/src/tensorflow_models_base/tensorflow_models_base/: model.py
ros2_ws/src/tensorflow_models_base/training2/: labels.txt
ros2_ws/src/vrep_vsv_driver/launch/: vsv_geom_mux.launch.py
(+49 files in other folders)
