<package format="3">
  <name>rqt_virtual_joystick</name>
  <version>0.1.0</version>
  <description>
    RQt plugin that simulates a joystick and publishes sensor_msgs/Joy and geometry_msgs/Twist (cmd_vel) messages.
  </description>
  <license>BSD</license>

  <author>Abdelrahman Mahmoud</author>
  <maintainer email="abdelrahman.mahmoud1995@gmail.com">Abdelrahman Mahmoud</maintainer>

  <url type="repository">https://github.com/amgaber95/rqt_virtual_joystick</url>
  <url type="bugtracker">https://github.com/amgaber95/rqt_virtual_joystick/issues</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
